# JourLoc

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json
migrations/: 0001_init.sql
public/: app.js  index.html  styles.css
src/: auth.rs  config.rs  db.js  db.rs  error.rs  handlers.rs  main.rs  models.rs  schema.sql  server.js  state.rs
